project2/spl-spec/test/test_2_r10.spl
struct Person
{
  int friends[10][13][14];
  int name;
};
int test_2_r10()
{
  struct Person tom;
  struct Person people[10];
  int i = 0;
  while (i < 10)
  {
    people[i].name = i;
    tom.friends[i] = i;
    i = i + 1;
  }
  return tom.name[i-1];
}
